# PMDaze

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-action.yml
source/: TODO.txt
source/dsp/: Envelope.cpp  Envelope.h  FXProcessors.h  FastMath.hpp  LFO.h  Oscillator.cpp  Oscillator.h  PMProcessor.cpp  PMProcessor.h  PMSynth.cpp  PMSynth.h  PMVoice.cpp  PMVoice.h
source/ui/: APColors.h  APLevelMeter.h  APModAdditions.h  EnvelopeComponent.h  FXEditor.cpp  FXEditor.h  FXPanels.h  Fonts.h  MainEditor.cpp  MainEditor.h  MainPanels.h  ModEditor.cpp  ModEditor.h  ModPanels.h  PMEditor.cpp  PMEditor.h
